--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,6 +1,8 @@
 extend ../includes/layout
 
 block main-content
+  a(href="/") Home
+  div(ng-include="'/partials/account/navbar-login'") 
   section.content
     div(ng-view)
   h2= mongoMessage
